unpackaged/main/default/objects/Quote/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <formula>text(MONTH(today()))+ "/" + text(DAY(today())) + "/" + text(Year(today()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Date</label>
    <type>Text</type>
</CustomField>