unpackaged/main/default/objects/Quote/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Ground 2-day</fullName>
            </value>
            <value>
                <fullName>Ground 3-day</fullName>
            </value>
            <value>
                <fullName>FedEx Overnight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>